// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTime is rendered correctly to match the snapshot in case with description 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
}

.emotion-2 {
  margin-right: 0.5rem;
  font-weight: 600;
}

.emotion-4 {
  font-weight: bolder;
  color: hsla(212, 72%, 40%);
}

<ThemeProvider
  theme={
    Object {
      "color": Object {
        "articleShareButtons": Object {
          "buttonWrapperDiv": Object {
            "shadow": "hsla(212, 72%, 80%)",
          },
        },
        "blogTitle": Object {
          "logoWrapperAnchor": Object {
            "textOnHover": "hsla(148, 72%, 80%)",
          },
        },
        "bodyHeader": Object {
          "titleAnchor": Object {
            "shadow": "hsla(148, 72%, 80%)",
          },
        },
        "categoryTag": Object {
          "anchor": Object {
            "bg": "hsla(212, 72%, 50%)",
            "bgOnHover": "hsla(212, 72%, 60%)",
            "shadow": "hsla(212, 72%, 80%)",
            "text": "white",
          },
        },
        "common": Object {
          "border": Object {
            "primary": "hsla(0, 0%, 50%)",
            "primaryLight": "hsla(0, 0%, 75%)",
          },
          "text": Object {
            "accent": "hsla(148, 72%, 50%)",
            "primary": "hsla(0, 0%, 15%)",
            "primaryLight": "hsla(0, 0%, 40%)",
            "secondary": "hsla(212, 72%, 40%)",
          },
        },
        "dateTime": Object {
          "isoDateTime": Object {
            "text": "hsla(212, 72%, 40%)",
          },
        },
        "global": Object {
          "body": Object {
            "bg": "hsla(60, 72%, 60%)",
          },
          "table": Object {
            "tr": Object {
              "bg2n": "hsla(148, 72%, 90%)",
            },
          },
        },
        "markdownRenderer": Object {
          "convertedMdBody": Object {
            "blockquote": Object {
              "border": "hsla(212, 72%, 90%)",
            },
          },
        },
        "siteHeader": Object {
          "header": Object {
            "bg": "hsla(148, 72%, 30%)",
            "shadow": "hsla(148, 72%, 20%)",
          },
          "innerWrapperFlexContainerDiv": Object {
            "shadow": "hsla(148, 72%, 20%)",
          },
        },
        "socialLinkWithIcon": Object {
          "socialLinkAnchor": Object {
            "textOnHover": "hsla(60, 72%, 60%)",
          },
        },
      },
    }
  }
>
  <DateTime
    date="2021-01-01T00:00:00.000Z"
    description="test h2

this is a test paragraph of test-article-id-1.

"
  >
    <ComponentWrapperDiv>
      <div
        className="emotion-0 emotion-1"
      >
        <DescriptionSpan>
          <span
            className="emotion-2 emotion-3"
          >
            test h2

this is a test paragraph of test-article-id-1.

:
          </span>
        </DescriptionSpan>
        <ISODateTime>
          <time
            className="emotion-4 emotion-5"
          >
            2021-01-01T00:00:00.000Z
          </time>
        </ISODateTime>
      </div>
    </ComponentWrapperDiv>
  </DateTime>
</ThemeProvider>
`;

exports[`DateTime is rendered correctly to match the snapshot in case without description 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
}

.emotion-2 {
  font-weight: bolder;
  color: hsla(212, 72%, 40%);
}

<ThemeProvider
  theme={
    Object {
      "color": Object {
        "articleShareButtons": Object {
          "buttonWrapperDiv": Object {
            "shadow": "hsla(212, 72%, 80%)",
          },
        },
        "blogTitle": Object {
          "logoWrapperAnchor": Object {
            "textOnHover": "hsla(148, 72%, 80%)",
          },
        },
        "bodyHeader": Object {
          "titleAnchor": Object {
            "shadow": "hsla(148, 72%, 80%)",
          },
        },
        "categoryTag": Object {
          "anchor": Object {
            "bg": "hsla(212, 72%, 50%)",
            "bgOnHover": "hsla(212, 72%, 60%)",
            "shadow": "hsla(212, 72%, 80%)",
            "text": "white",
          },
        },
        "common": Object {
          "border": Object {
            "primary": "hsla(0, 0%, 50%)",
            "primaryLight": "hsla(0, 0%, 75%)",
          },
          "text": Object {
            "accent": "hsla(148, 72%, 50%)",
            "primary": "hsla(0, 0%, 15%)",
            "primaryLight": "hsla(0, 0%, 40%)",
            "secondary": "hsla(212, 72%, 40%)",
          },
        },
        "dateTime": Object {
          "isoDateTime": Object {
            "text": "hsla(212, 72%, 40%)",
          },
        },
        "global": Object {
          "body": Object {
            "bg": "hsla(60, 72%, 60%)",
          },
          "table": Object {
            "tr": Object {
              "bg2n": "hsla(148, 72%, 90%)",
            },
          },
        },
        "markdownRenderer": Object {
          "convertedMdBody": Object {
            "blockquote": Object {
              "border": "hsla(212, 72%, 90%)",
            },
          },
        },
        "siteHeader": Object {
          "header": Object {
            "bg": "hsla(148, 72%, 30%)",
            "shadow": "hsla(148, 72%, 20%)",
          },
          "innerWrapperFlexContainerDiv": Object {
            "shadow": "hsla(148, 72%, 20%)",
          },
        },
        "socialLinkWithIcon": Object {
          "socialLinkAnchor": Object {
            "textOnHover": "hsla(60, 72%, 60%)",
          },
        },
      },
    }
  }
>
  <DateTime
    date="2021-01-01T00:00:00.000Z"
  >
    <ComponentWrapperDiv>
      <div
        className="emotion-0 emotion-1"
      >
        <ISODateTime>
          <time
            className="emotion-2 emotion-3"
          >
            2021-01-01T00:00:00.000Z
          </time>
        </ISODateTime>
      </div>
    </ComponentWrapperDiv>
  </DateTime>
</ThemeProvider>
`;
